[gd_scene load_steps=3 format=2]

[ext_resource path="res://source/menu/login_panel/LoginPanel.gd" type="Script" id=1]
[ext_resource path="res://resources/fonts/content.tres" type="DynamicFont" id=2]

[node name="LoginPanel" type="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 195.0
margin_bottom = 185.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 188.0
margin_bottom = 215.0
grow_horizontal = 2
grow_vertical = 2

[node name="AccountLabel" type="Label" parent="VBoxContainer"]
margin_right = 181.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "Email:"
align = 1
valign = 1

[node name="AccountLine" type="LineEdit" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 181.0
margin_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "Emaleth@protonmail.com"
align = 1
caret_blink = true
caret_blink_speed = 0.5

[node name="PasswordLabel" type="Label" parent="VBoxContainer"]
margin_top = 58.0
margin_right = 181.0
margin_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "Password:"
align = 1
valign = 1

[node name="PasswordLine" type="LineEdit" parent="VBoxContainer"]
margin_top = 82.0
margin_right = 181.0
margin_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "12345678"
align = 1
secret = true
caret_blink = true
caret_blink_speed = 0.5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 116.0
margin_right = 181.0
margin_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Remember" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 2.0
margin_right = 153.0
margin_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
text = "Remember credentials"

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 157.0
margin_right = 181.0
margin_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2

[node name="Login" type="Button" parent="VBoxContainer"]
margin_top = 144.0
margin_right = 181.0
margin_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 10
custom_fonts/font = ExtResource( 2 )
text = "Login"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 174.0
margin_right = 181.0
margin_bottom = 178.0

[node name="RegisterTab" type="Button" parent="VBoxContainer"]
margin_top = 182.0
margin_right = 181.0
margin_bottom = 208.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Create new account"

[connection signal="pressed" from="VBoxContainer/Login" to="." method="_on_Login_pressed"]
[connection signal="pressed" from="VBoxContainer/RegisterTab" to="." method="_on_RegisterTab_pressed"]
